# citizen-astronomy

./: '@ + $outPath + @'  .gitignore  .photometry-settings.json  CODEBASE_MAP.md  CONTRIBUTING.md  CitizenAstronomyAlphaReview.spec  CitizenPhotometryDebug.spec  DOCUMENTATION.md  HR_DIAGRAM.md  LICENSE  README.md  _3i_benchmark_assume_aligned.txt  _bench_extract.txt  _bench_filter.txt  _bench_phase3_out.txt  _blink_benchmark_out.txt  _diagnose_blink_davida.txt  _pytest_blink.txt  _version_date_check.txt  asteroid_comet_detection.md  asteroid_pytest_output.txt  benchmark_out.txt  benchmark_out2.txt  benchmark_output.txt  benchmark_phase3_out.txt  broad_sky_merged_text_output.txt  build.md  differential_photometry.md  full_solar_pytest.txt  help.txt  hr_working_table.csv  main_window_isolated_test_output.txt  main_window_refresh_test_output.txt  merged_text_test_output.txt  pyproject.toml  pytest_out.txt  script.py  smoke_test_output.txt  star_instructions.md  star_instructions_phase2.md  (+7 more)
assets/: README.md
docs/: Doc_DifferentialPhotometry.md  MOON_PHASE5I_REGISTRATION.md  MOON_PHASE5J_RUNTIME_EQUIVALENCE.md  MOON_PHASE5K_TILED_NORMAL_CONTINUITY.md  MOON_PHASE5L_POLAR_UV_GUARD.md  MOON_PHASE5M_POLAR_CAPS.md  MOON_PHASE5N_POLAR_CAP_BLEND.md  MOON_PHASE5O_POLAR_CAP_INTEGRATION.md  codebase_map_printable.html  codebase_map_printable.md  recovery_audit_2026-04-11_onward.md
guides/: asteroid_comet_detection.md  astrostack.md  differential_photometry.md  distance_map.md  sky_atlas.md  sky_explorer.md  themes_layout_ui.md
packaging/: ALPHA_REVIEW_CLEAN_MACHINE_CHECKLIST.md  (+11 more)
(+190 files in other folders)
